--- a/mobile/src/main/res/layout/activity_songs.xml
+++ b/mobile/src/main/res/layout/activity_songs.xml
@@ -11,6 +11,6 @@
     <ListView
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
-        android:id="@+id/songs_list"/>
+        android:id="@android:id/list"/>
 
 </LinearLayout>
